# scrapper

./: README.md  products.csv  pyproject.toml
src/material_scrapper/: main.py
